@startuml
'https://plantuml.com/class-diagram

abstract class Command
class AddCommand
class RemoveCommand

Command <|-- AddCommand
Command <|-- RemoveCommand

class AddCommand {
isBye = false
+AddCommand()
+execute(Ui ui, Parser parser,
IngredientList ingredientList)
+exitNotRequired()
}

class RemoveCommand {
isBye = false
+AddCommand()
+execute(Ui ui, Parser parser,
IngredientList ingredientList)
+exitNotRequired()
+handleRemovalOfItem(Ui ui, IngredientList ingredientList,
String nameOfItemToBeRemoved, ArrayList<Ingredient> matchingItems)
}

abstract class Command {
isBye = false
+Command()
+execute(Ui ui, Parser parser, IngredientList ingredientList)
+exitNotRequired()
}

@enduml